--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@900&family=Poppins:ital,wght@0,500;1,400&display=swap");
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 .App {
   text-align: center;
+  padding-top: 80px;
 }
 
 .App-logo {
