--- a/src/Components/companies/companies.scss
+++ b/src/Components/companies/companies.scss
@@ -1,4 +1,4 @@
-.main-container{
+.main-container {
   background-color: #f1f1ec;
   background-size: cover;
   display: flex;
@@ -35,13 +35,13 @@
 }
 .hiring {
   background-color: #935073 !important;
-    color: #fff !important;
-    margin-top: 20px;
-    height: 40px;
-    width: 200px;
-    border: none;
-    border-radius: 30px;
-    margin-left: 40px;
+  color: #fff !important;
+  margin-top: 20px;
+  height: 40px;
+  width: 200px;
+  border: none;
+  border-radius: 30px;
+  margin-left: 40px;
 }
 .data {
   color: #717169;
@@ -54,23 +54,24 @@
 .bridging-gap {
   display: flex;
 }
-#row-heading{
-    width: 35%;
-    h2 {
-      font-size: 24px;
-      color: #935073;
-      font-family: "Maven Pro", sans-serif;
-      margin-left: 130px;
-    }
+#row-heading {
+  width: 35%;
+  h2 {
+    font-size: 24px;
+    color: #935073;
+    font-family: "Maven Pro", sans-serif;
+    margin-left: 130px;
+  }
 }
-.gap{
-    color:black !important;
+.gap {
+  color: black !important;
 }
 h1 {
   color: #87c05a;
   font-size: 65px;
   margin-top: -40px;
   font-family: "Maven Pro", sans-serif;
-
 }
-.img-container{height: 100%;}
+.img-container {
+  height: 100%;
+}
