--- a/src/Components/footer/footer.scss
+++ b/src/Components/footer/footer.scss
@@ -1,5 +1,6 @@
 .footer {
   font-family: "Maven Pro", sans-serif;
+  margin-top: 3rem;
   h1 {
     color: #000000;
     font-size: 45px;
@@ -48,17 +49,17 @@
     padding-bottom: 1rem;
   }
 }
-a{
-    text-decoration: none !important;
+a {
+  text-decoration: none !important;
 }
 #bottom {
-    color:#fff;
-    position: relative;
-    right: 32%;
+  color: #fff;
+  position: relative;
+  right: 32%;
   a {
     font-family: "Poppins", sans-serif;
 
     text-decoration: none;
-    color:#fff;
+    color: #fff;
   }
 }
