--- a/src/Components/read-more/readmore.scss
+++ b/src/Components/read-more/readmore.scss
@@ -7,7 +7,8 @@
 }
 .read-or-hide {
   font-family: "Poppins", sans-serif;
-  font-weight: 300;
+  font-weight: 400;
   margin-left: 8px;
+  margin-top: 10px;
   color:#935073;
 }
